--- a/main/django-app/requirements.txt
+++ b/main/django-app/requirements.txt
@@ -1,48 +1,61 @@
-altgraph>=0.17.2
-asgiref>=3.5.2
-attrs>=22.1.0
-auto-py-to-exe>=2.17.0
-Automat>=20.2.0
-bottle>=0.12.19
-bottle-websocket>=0.2.9
-cffi>=1.15.0
-click>=8.1.3
-colorama>=0.4.4
-constantly>=15.1.0
-Django>=4.1.2
-django-upgrade>=1.10.0
-Eel>=0.12.4
-future>=0.18.2
-gevent>=21.12.0
-gevent-websocket>=0.10.1
-greenlet>=1.1.2
-hyperlink>=21.0.0
-idna>=3.4
-incremental>=22.10.0
-IProgress>=0.4
-numpy>=1.23.4
-pefile>=2021.9.3
-pycparser>=2.21
-pygame>=2.1.2
-pyinstaller>=4.9
-pyinstaller-hooks-contrib>=2022.1
-PySide2>=5.15.2.1
-PySimpleGUI>=4.60.1
-PySimpleGUIDesigner>=0.1.4.7
-PyWebDAV3>=0.10.0
-pywin32-ctypes>=0.2.0
-shiboken2>=5.15.2.1
-six>=1.16.0
-sqlparse>=0.4.3
-tabulate>=0.8.9
-tokenize-rt>=5.0.0
-tqdm>=4.62.3
-Twisted>=22.8.0
-#twisted-iocpsupport==1.0.2
-typing_extensions>=4.4.0
-tzdata>=2022.4
-vnc2flv-rec>=0.2.0
-websockify>=0.10.0
-whichcraft>=0.6.1
-zope.event>=4.5.0
-zope.interface>=5.4.0
+altgraph==0.17.3
+asgiref==3.6.0
+attrs==22.2.0
+auto-py-to-exe==2.30.0
+Automat==22.10.0
+bottle==0.12.23
+bottle-websocket==0.2.9
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+constantly==15.1.0
+cryptography==39.0.1
+Django==4.1.7
+django-extensions==3.2.1
+django-revproxy==0.10.0
+django-upgrade==1.13.0
+docopt==0.6.2
+Eel==0.14.0
+future==0.18.3
+gevent==22.10.2
+gevent-websocket==0.10.1
+greenlet==2.0.2
+hyperlink==21.0.0
+idna==3.4
+incremental==22.10.0
+IProgress==0.4
+MarkupSafe==2.1.2
+numpy==1.24.2
+pefile==2023.2.7
+pipreqs==0.4.11
+pycparser==2.21
+pygame==2.1.3
+pyinstaller==5.8.0
+pyinstaller-hooks-contrib==2023.0
+pyOpenSSL==23.0.0
+pyparsing==3.0.9
+PySide2==5.15.2.1
+PySimpleGUI==4.60.4
+PySimpleGUIDesigner==0.1.4.7
+PyWebDAV3==0.10.0
+pywin32-ctypes==0.2.0
+requests==2.28.2
+shiboken2==5.15.2.1
+six==1.16.0
+sqlparse==0.4.3
+tabulate==0.9.0
+tokenize-rt==5.0.0
+tqdm==4.64.1
+Twisted==22.10.0
+typing-extensions==4.5.0
+tzdata==2022.7
+urllib3==1.26.14
+vnc2flv-rec==0.2.0
+websockify==0.10.0
+Werkzeug==2.2.3
+whichcraft==0.6.1
+yarg==0.1.9
+zope.event==4.6
+zope.interface==5.5.2
