--- a/main/django-app/requirements.txt
+++ b/main/django-app/requirements.txt
@@ -16,6 +16,7 @@ Django==4.1.7
 django-extensions==3.2.1
 django-revproxy==0.10.0
 django-upgrade==1.13.0
+djangorestframework==3.14.0
 docopt==0.6.2
 Eel==0.14.0
 future==0.18.3
@@ -29,6 +30,7 @@ IProgress==0.4
 MarkupSafe==2.1.2
 numpy==1.24.2
 pefile==2023.2.7
+Pillow==9.5.0
 pipreqs==0.4.11
 pycparser==2.21
 pygame==2.1.3
@@ -39,12 +41,16 @@ pyparsing==3.0.9
 PySide2==5.15.2.1
 PySimpleGUI==4.60.4
 PySimpleGUIDesigner==0.1.4.7
+pytz==2023.3
 PyWebDAV3==0.10.0
 pywin32-ctypes==0.2.0
+qemu==0.0.0a1
+qemu.qmp==0.0.2
+qmp==0.0.1
 requests==2.28.2
 shiboken2==5.15.2.1
 six==1.16.0
-sqlparse==0.4.4
+sqlparse==0.4.3
 tabulate==0.9.0
 tokenize-rt==5.0.0
 tqdm==4.64.1
