--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.tar.xz filter=lfs diff=lfs merge=lfs -text
 *.deb filter=lfs diff=lfs merge=lfs -text
 *.raw filter=lfs diff=lfs merge=lfs -text
+*.iso filter=lfs diff=lfs merge=lfs -text
