--- a/main/django-app/requirements.txt
+++ b/main/django-app/requirements.txt
@@ -11,6 +11,7 @@ chardet==4.0.0
 charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
+channels==4.0.0
 constantly==15.1.0
 cryptography==39.0.1
 Django==4.1.9
