--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -44,7 +44,7 @@ pipreqs==0.4.11
 psutil==5.9.5
 PyAutoGUI==0.9.53
 pycparser==2.21
-pycurl==7.43.0.6
+#pycurl==7.43.0.6
 python_docx==1.0.0
 pygame==2.1.3
 PyGetWindow==0.0.9
