--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -72,7 +72,7 @@ PyYAML==5.3.1
 qemu==0.0.0a1
 qemu.qmp==0.0.2
 qmp==0.0.1
-reportbug==7.10.3+deb11u1
+#reportbug==7.10.3+deb11u1
 requests==2.31.0
 shiboken2==5.15.2.1
 six==1.16.0
