--- a/main/django-app/.gitignore
+++ b/main/django-app/.gitignore
@@ -11,12 +11,12 @@ __pycache__/
 env/
 build/
 develop-eggs/
-dist/
-downloads/
+#dist/
+#downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+#lib/
+#lib64/
 parts/
 sdist/
 var/
